
syntax = "proto3";
package slinky.alerts.v1;

import "cosmos/base/v1beta1/coin.proto";
import "amino/amino.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "slinky/alerts/v1/alerts.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/skip-mev/connect/v2/x/alerts/types";

// AlertParams is the set of parameters for the x/Alerts module's Alerting. It
// defines whether or not Alerts can be submitted, and if so, the minimum
// bond amount required to submit an Alert.
message AlertParams {
  // Enabled is a boolean defining whether or not Alerts can be submitted
  // to the module
  bool enabled = 1;

  // BondAmount is the minimum amount of bond required to submit an
  // Alert
  cosmos.base.v1beta1.Coin bond_amount = 2
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];

  // MaxBlockAge defines the maximum age of an Alert before it is pruned, notice
  // this is defined wrt. the height that the Alert references, i.e Alerts are
  // only relevant until Alert.Height + MaxBlockAge is reached.
  uint64 max_block_age = 3;
}

// PruningParams defines the criterion for pruning Alerts from the state.
message PruningParams {
  // Enabled defines whether Alerts are to be pruned
  bool enabled = 1;

  // BlocksToPrune defines the number of blocks until an Alert will be pruned
  // from state, notice this is defined wrt. the current block height, i.e
  // Alerts will be stored in state until current_height + BlocksToPrune is
  // reached.
  uint64 blocks_to_prune = 2;
}

// Params is the set of parameters for the x/Alerts module.
message Params {
  // AlertParams is the set of parameters for the x/Alerts module's Alerting.
  AlertParams alert_params = 1 [ (gogoproto.nullable) = false ];

  // ConclusionVerificationParams is the set of parameters for the x/Alerts
  // module's conclusion verification.
  google.protobuf.Any conclusion_verification_params = 2
      [ (cosmos_proto.accepts_interface) =
            "slinky.alerts.v1.ConclusionVerificationParams" ];

  // PruningParams is the set of parameters for the x/Alerts module's pruning.
  PruningParams pruning_params = 3 [ (gogoproto.nullable) = false ];
}

// GenesisState is the state that must be provided at genesis. It contains
// params for the module, and the set initial Alerts.
message GenesisState {
  // Params is the set of x/Alerts parameters
  Params params = 1 [ (gogoproto.nullable) = false ];

  // Alerts is the set of Alerts that have been submitted to the module
  repeated AlertWithStatus alerts = 2 [ (gogoproto.nullable) = false ];
}
